# customer-service

./: .gitignore  .gitmodules  .travis.yml  CustomerService.sln  CustomerService.sublime-project  README.md  appveyor.yml
CustomerService/: ApplicationInsights.config  CustomerService.csproj  CustomerService.svc.cs  ICustomerService.cs  Index.html  Web.config  packages.config
aspnet-mvc/: aspnet-mvc.sln  readme.md
clean-aspnet-core/: Program.cs  Startup.cs  readme.md
clean-aspnet-core-fsharp/: CustomerService.sln  readme.md
clojure/: .gitignore  Capstanfile  Dockerfile  Procfile  README.md  project.clj
csharp-graphql/: .gitignore  CustomerService.sln
freya/: CustomerService.sln  build.fsx  build.sh  paket.dependencies  readme.md
go-server/: .gitignore  readme.md
libmicrohttpd/: .editorconfig  .gitignore  configure.ac
libmicrohttpd/src/: Makefile.am  main.c
mono/: CustomerService.sln
nancy/: CustomerService.sln  nuget.config  rakefile.rb
node/: .editorconfig  .gitignore  Gruntfile.js  index.js  package.json
owin/: .editorconfig  CustomerService.sln  readme.md
owin_fsharp/: .gitignore  CustomerService.sln  build.cmd  paket.dependencies  readme.md
rails/: Gemfile  package.json
scotty/: CustomerService.cabal  LICENSE  Main.hs
sinatra/: Gemfile  Rakefile  config.ru
suave/: .gitignore  CustomerService.sln  build.cmd  build.fsx  build.sh  paket.dependencies  rakefile.rb  readme.md
wcf/: CustomerService.sln  aspnet-wcf.sln  build.sh  rakefile.rb  readme.md
webhandler/: CustomerService.sln  Gemfile  rakefile.rb  readme.md
(+340 files in other folders)
